--- a/Practico/TP_Evaluables/Trabajo_Practico_N6/Delivery_Loquesea/app/src/main/AndroidManifest.xml
+++ b/Practico/TP_Evaluables/Trabajo_Practico_N6/Delivery_Loquesea/app/src/main/AndroidManifest.xml
@@ -14,11 +14,21 @@
         android:theme="@style/Theme.Delivery_Loquesea"
         tools:targetApi="31">
         <activity
+            android:name=".view.ResumenActivity"
+            android:exported="false"
+            android:parentActivityName=".view.MedioPagoActivity"/>
+        <activity
+            android:name=".view.MedioPagoActivity"
+            android:exported="false"
+            android:parentActivityName=".view.DomicilioEntregaActivity"/>
+        <activity
             android:name=".view.DomicilioEntregaActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".view.DescripcionPedidoActivity"/>
         <activity
             android:name=".view.DescripcionPedidoActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
